improvements and updated image tracking